@@ -4,8 +4,8 @@ import java.util.Arrays;
 import java.util.List;
 
 public class DeviceModels {
-    public static final List<String> FAN_MODELS = Arrays.asList(
-                "Atomberg Smart Fan"
+    public static final List<String> FAN_MODELS = List.of(
+            "Atomberg Smart Fan"
     );
 
     public static final List<String> WATER_PURIFIER_MODELS = List.of(
